<resources>
    <string name="app_name">LIZARD APP</string>
    <string name="label1">SET YOUR PASSWORD</string>
    <string name="pwlabel">Password</string>
    <string name="reenterlabel">Reenter password</string>
    <string name="setpwd">Set password</string>
    <string name="checkbox">YOU HAVENT ANOTHER CHANCE TO CHANGE THIS PASSWORD</string>
    <string name="label2">Select one</string>
    <string name="radiobtn1">Calculator</string>
    <string name="radiobtn2">Call Recorder</string>
    <string name="autocomplete1">When you select the item you have no longer able to change it.When you are going to unlock the folder,you have to use your password as the input </string>
    <string name="calequal">=</string>
    <string name="caldelete">AC</string>
    <string name="calone">1</string>
    <string name="caltwo">2</string>
    <string name="txtRestore">Restore</string>
    <string name="calthree">3</string>
    <string name="calfour">4</string>
    <string name="txtInsert">Insert</string>
    <string name="txtDelete">Delete</string>
    <string name="txtAddImages">Click on image to add files...</string>
    <string name="calfive">5</string>
    <string name="calsix">6</string>
    <string name="calseven">7</string>
    <string name="caleight">8</string>
    <string name="txtShow">Show</string>
    <string name="calnine">9</string>
    <string name="calzero">0</string>
    <string name="calplus">+</string>
    <string name="caldivide">/</string>
    <string name="calminus">-</string>
    <string name="calmultiply">x</string>
    <string name="caldot">.</string>
    <string name="Username">User Name</string>
    <string name="invalid_name">please enter a name</string>
    <string name="Enter_a_six_digits_number">please fill the password</string>
    <string name="invalid_password">enter 6 digit password</string>
    <string name="passwords_are_not_matching">enter the same password</string>
    <string name="username">User Name</string>
    <string name="password">Enter Six Digits Number</string>
    <string name="confirmation">Confirm</string>
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>
    <dimen name="nav_header_vertical_spacing">8dp</dimen>
    <dimen name="nav_header_height">176dp</dimen>
    <dimen name="fab_margin">16dp</dimen>


    //////////////////////////////////////////////////////


    <string name="search">Search</string>
    <string name="account">MyAccount</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="homeTextUpper">Lock</string>
    <string name="homeTextLower">Your Important Items</string>
    <string name="homeLogo">homeLogo</string>
    <string name="btnHomeImages">Images</string>
    <string name="homeImageView">imagesHome</string>
    <string name="abnHomeAudio">Audio</string>
    <string name="homeAudioImgView">audioHome</string>
    <string name="btnHomeVideo">Video</string>
    <string name="btnHomeCallRecords">Call Records</string>
    <string name="homeVideoImgView">TODO</string>
    <string name="homeCallImgView">TODO</string>
    <string name="galleryAddImageImgView">addImages</string>
    <string name="galleryTxtAddImg">Add</string>
    <string name="galleryImgRetreive">retreive</string>
    <string name="galleryTxtRetreive">Secure</string>
    <string name="galleryImgRestore">imgRestore</string>
    <string name="galleryTxtRestore">Restore</string>
    <string name="galleryImgDelete">imgDelete</string>
    <string name="galleryTxtDelete">Delete</string>
    <string name="send_to_db">send_to_db</string>
    <string name="btn_send_to_db">send_to_db</string>
    <string name="sendCount">0</string>
    <string name="InsertImage_testImg">testImage</string>
    <string name="text_gallery_picture_count">1</string>
    <string name="imageviewer">imageViewer</string>
    <string name="save_image">Save Image</string>
    <string name="enter_the_image_name_here">Enter the image name here</string>
    <string name="move_to_show_activity">Move To Show Activity</string>
    <string name="image_details_single_new">Image Details</string>
    <string name="image_single_new">image_single_new</string>
    <string name="show_images">Show Images</string>
    <string name="todo">TODO</string>
    <string name="navi_drawer_txt_below">navi_drawer_txt_below</string>
    <string name="nav_drawer_img_x">nav_drawer_img_x</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Welcome to</string>
    <string name="nav_header_subtitle">LIZARD APP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Update Password</string>
    <string name="menu_gallery">Home</string>
    <string name="menu_slideshow">Recycle</string>

</resources>