<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:background="#FDFDFD"
    tools:context=".MainActivity">

    <!--for bugs-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/homeTextLower"
            app:layout_constraintEnd_toStartOf="@+id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <include
            android:id="@+id/toolbarX"
            layout="@layout/toolbar"
            android:background="#FFFDFD"
            app:navigationIcon="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo"
            android:text="@string/homeTextUpper"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarX" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/homeLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/toolbarX"
            app:srcCompat="@drawable/newlogo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/btnHomeImages"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/homeImageView"
                        app:srcCompat="@drawable/pi1" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/abnHomeAudio"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/homeAudioImgView"
                        app:srcCompat="@drawable/audio" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/btnHomeVideo"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/video1"
                        android:contentDescription="@string/homeVideoImgView" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView4"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/btnHomeCallRecords"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/call"
                        android:contentDescription="@string/homeCallImgView" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>